[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buywhere-llamaindex"
version = "0.1.0"
description = "LlamaIndex FunctionTool wrappers for the BuyWhere product catalog API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "BuyWhere", email = "dev@buywhere.io" }]
keywords = ["llamaindex", "llama-index", "buywhere", "shopping", "ecommerce", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "llama-index-core>=0.10.0",
    "tenacity>=8.0.0",
]

[project.urls]
Homepage = "https://buywhere.ai"
Documentation = "https://docs.buywhere.ai"
Repository = "https://github.com/buywhere-ai/buywhere-llamaindex"

[tool.hatch.build.targets.wheel]
packages = ["src/buywhere_llamaindex"]
